k8s/14-masterlion.yaml
apiVersion: v1
kind: Service
metadata:
  name: masterlion
  namespace: masterlion
  labels:
    app.kubernetes.io/name: masterlion
    app.kubernetes.io/part-of: masterlion
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: masterlion
  ports:
    - port: 3210
      targetPort: 3210
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: masterlion
  namespace: masterlion
  labels:
    app.kubernetes.io/name: masterlion
    app.kubernetes.io/part-of: masterlion
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: masterlion
  template:
    metadata:
      labels:
        app.kubernetes.io/name: masterlion
        app.kubernetes.io/part-of: masterlion
    spec:
      imagePullSecrets:
        - name: acr-credential-secret-aggregation
      containers:
        - name: masterlion
          image: boen-registry-vpc.cn-shenzhen.cr.aliyuncs.com/biel_client/masterlion:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3210
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "1000m"
              memory: 2Gi
          readinessProbe:
            tcpSocket:
              port: 3210
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 3210
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 3
          startupProbe:
            tcpSocket:
              port: 3210
            periodSeconds: 10
            failureThreshold: 30
